<resources>
    <string name="app_name">Tofte Bar</string>
    <string name="welcome_text">Welcome to my sweet Sodastream Bar - with all the fizz you want!</string>

    // Main menu
    <string name="btn_drinks">Drinks</string>
    <string name="btn_map">Map</string>
    <string name="btn_dessert">Desserts</string>
    <string name="btn_about">About</string>
    <string name="btn_song">Songs</string>
    <string name="btn_profile">Profile</string>
    <string name="btn_event">Event</string>

    // Profile
    <string name="btn_profileSave">Save</string>
    <string name="btn_profileCancel">Cancel</string>
    <string name="btn_profileDelete">Delete</string>
    <string name="btn_takePicture">Take picture</string>
    <string name="profileSaved">Your profile was saved</string>
    <string name="profileImageExists">Previous image was overwritten</string>
    <string name="profileDeleted">Your profile was successfully deleted</string>

    // Event
    <string name="event_time">Time</string>
    <string name="event_date">Date</string>
    <string name="event_drinks">Drinks</string>
    <string name="event_person">Person</string>
    <string name="btn_event_save">Save event</string>
    <string name="event_err_emptyFields">Please fill all fields</string>
    <string name="event_saved">Event saved</string>

</resources>
