<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.caspertofte.toftebar.Event_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--TODO: Make time and date use date picker -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/event_date"/>
            <EditText
                android:id="@+id/eventDate"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="datetime"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/event_time"/>
            <EditText
                android:id="@+id/eventTime"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="datetime" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/event_drinks"/>
            <!--<EditText
                android:id="@+id/eventDrinks"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="text"/>-->
            <Spinner
                android:id="@+id/eventDrinks"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/event_person"/>
            <EditText
                android:id="@+id/eventPerson"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            >

        <Button
            android:id="@+id/btn_eventSave"
            android:text="@string/btn_event_save"
            style="@style/btn_profile"
            android:onClick="eventSave"
            />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
