<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.caspertofte.toftebar.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:id="@+id/welcomeText"
        android:gravity="center"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:textSize="25dp" />
<LinearLayout
    android:id="@+id/button_groups"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true">
<LinearLayout
    android:id="@+id/button_group1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/btn_about"
        android:text="@string/btn_about"
        android:layout_alignParentLeft="true"
        style="@style/btn_main"
        />
    <Button
        android:id="@+id/button_contact"
        android:text="@string/btn_contact"
        android:layout_alignParentRight="true"
        style="@style/btn_main"
        />
</LinearLayout>
    <LinearLayout
        android:id="@+id/button_group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/button_drinks"
        android:text="@string/btn_drinks"
        android:layout_alignParentRight="true"
        android:onClick="drinksActivity"
        style="@style/btn_main"/>
    <Button
        android:id="@+id/btn_map"
        android:text="@string/btn_map"
        android:layout_alignParentLeft="true"
        style="@style/btn_main"
        />
    </LinearLayout>
        />
    <!--<Button
        android:id="@+id/btn_test"
        android:text="@string/btn_test"
        android:layout_alignParentRight="true"
        android:layout_width="150dp"
        android:layout_height="75dp"
        />
        -->
</LinearLayout>

</RelativeLayout>
