<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.caspertofte.toftebar.Profile_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="Fornavn"/>
                <EditText
                    android:id="@+id/profile_firstName"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"/>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="Efternavn"/>
            <EditText
                android:id="@+id/profile_lastName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="Email"/>
            <EditText
                android:id="@+id/profile_email"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_takePicture"
                android:onClick="takeImage"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            >

            <Button
                android:id="@+id/btn_profileSave"
                android:text="@string/btn_profileSave"
                style="@style/btn_profile"
                android:onClick="profileSave"
                />

            <Button
                style="@style/btn_profile"
                android:text="@string/btn_profileCancel"
                android:id="@+id/btn_profileCancel"
                android:onClick="profileCancel"
                />

            <Button
                style="@style/btn_profile"
                android:text="@string/btn_profileDelete"
                android:id="@+id/btn_profileDelete"
                android:onClick="profileDelete"


                 />

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>
